# nix-disk

./: .gitignore  Cargo.toml  README.md  build-rust.sh  flake.nix  meson.build  package.nix
data/: meson.build  nix-disk.desktop.in  org.glfos.nixdiskmanager.in
data/icons/: meson.build
po/: LINGUAS  POTFILES  en.po  fr.po  it.po  meson.build
src/: main.rs
src/models/: disk.rs  mod.rs  partition.rs
src/ui/: app.rs  mod.rs  window.rs
src/ui/dialogs/: format_disk.rs  manage_disk.rs  missing_partitions.rs  mod.rs  welcome.rs
src/ui/widgets/: disks.rs  mod.rs
src/utils/: disk_parser.rs  disk_writer.rs  mod.rs
