[package]
name = "nix-disk"
version = "2.3.2"
edition = "2021"
authors = ["Original Python version contributors"]
license = "GPL-3.0-or-later"
description = "A simple GUI to manage disks on NixOS"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
glib = "0.20"
gio = "0.20"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
