icondir = datadir / 'icons' / 'hicolor'

install_data('nix-disk-16x16.png', install_dir: icondir / '16x16' / 'apps', rename: 'nix-disk.png')
install_data('nix-disk-32x32.png', install_dir: icondir / '32x32' / 'apps', rename: 'nix-disk.png')
install_data('nix-disk-48x48.png', install_dir: icondir / '48x48' / 'apps', rename: 'nix-disk.png')
install_data('nix-disk-64x64.png', install_dir: icondir / '64x64' / 'apps', rename: 'nix-disk.png')
install_data('nix-disk-128x128.png', install_dir: icondir / '128x128' / 'apps', rename: 'nix-disk.png')
install_data('nix-disk-256x256.png', install_dir: icondir / '256x256' / 'apps', rename: 'nix-disk.png')
install_data('nix-disk-512x512.png', install_dir: icondir / '512x512' / 'apps', rename: 'nix-disk.png')
install_data('nix-disk-128x128.png', install_dir: pkgdatadir, rename: 'logo.png')
